Adding Mavrn Release Plugin. Closes #3.